--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 <div class="mygallery" id="gallery">
 	<h3 class="text-center slideanim">My Gallery</h3>
 	<div class="text-center"> 
-		<a href="images/g1-1.jpg" title="My Image Gallery"><img src="images/g1.jpg" alt="example-1" class="img-responsive slideanim"></a> 
+		<a href="images/g1-1.jpg" title="My Image Gallery"><img src="images/g1.jpg" alt="example-1" class="img-responsive slideanim"></a>
+		<a href="images/banner1.jpg" title="My Image Gallery"><img src="images/banner1.jpg" alt="example-1" class="img-responsive slideanim"></a>  
 			
 	</div>
 
