--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <!-- /font links -->	
 <!-- js files -->
 <script src="js/modernizr.custom.js"></script>
+
+
+
 <!-- /js files -->
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -32,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html"></a>
+              <a class="navbar-brand" href="index.html">Bhargav Chauhan</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse navbar-right">
               <ul class="nav navbar-nav link-effect">
@@ -45,7 +48,7 @@
             </div>
           </div>
         </nav>
-
+				
       </div>
     </div>
 <!-- Banner -->
@@ -77,7 +80,7 @@
 				<div class="mydetails slideanim text-center">
 					<img class="img-circle img-responsive" src="images/me.jpg" alt="Generic placeholder image" width="200" height="200">
 					<h3>Bhargav Chauhan</h3>
-					<p>Web Developer</p>
+					<p>Computer Engineer</p>
 					<div class="social-icons">
 						<a href="https://www.facebook.com/bhargav.chauhan.923"><span class="facebook"></span></a>
 					<a href="https://twitter.com/Bchauhan1806"><span class="twitter"></span></a>
@@ -152,7 +155,9 @@
 	<h3 class="text-center slideanim">My Gallery</h3>
 	<div class="text-center"> 
 		<a href="images/g1-1.jpg" title="My Image Gallery"><img src="images/g1.jpg" alt="example-1" class="img-responsive slideanim"></a>
-		<a href="images/banner1.jpg" title="My Image Gallery"><img src="images/banner1.jpg" alt="example-1" class="img-responsive slideanim"></a>  
+		<a href="images/banner1.jpg" title="My Image Gallery"><img src="images/banner1.jpg" alt="example-1" class="img-responsive slideanim"></a>
+		<a href="images/me.jpg" title="My Image Gallery"><img src="images/me.jpg" alt="example-1" class="img-responsive slideanim"></a>
+		<a href="images/banner2.jpg" title="My Image Gallery"><img src="images/banner2.jpg" alt="example-1" class="img-responsive slideanim"></a>  
 			
 	</div>
 
@@ -189,7 +194,7 @@
 		</div>
 		<hr>
 		<div class="copyright">
-			<p class="text-center">© 2019 My Profile. All Rights Reserved | Design by <a>Bhargav Chauhan</a></p>
+			<p class="text-center">© 2020 My Profile. All Rights Reserved | Design by <a>Bhargav Chauhan</a></p>
 		</div>
 		<a href="#myPage" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
 		</footer>
