--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
                         </ul>
                     </div>
                     <div class="col-12 mt-3">
-                        <a class="button" href="./doc/Bdots_CV.pdf">
+                        <a class="button" href="./Bdots_CV.pdf">
                             <span class="button-text">Download CV</span>
                             <span class="button-icon fa fa-download"></span>
                         </a>
