--- a/about.html
+++ b/about.html
@@ -173,6 +173,7 @@
                             <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+917016250559 / +918401516472</span> </li>
                             <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">bdots1806@gmail.com</span> </li>
                             <li> <span class="title">LinkedIn :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">bdots1806</span> </li>
+                            <li><a href="https://github.com/Bdots1806/"> <span class="title">Github :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Bdots1806</span></a> </li>
                             <li> <span class="title">langages :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">English, Gujarati, Hindi</span> </li>
                         </ul>
                     </div>
