--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
                         </ul>
                     </div>
                     <div class="col-12 mt-3">
-                        <a class="button" href="./Bdots_CV.pdf">
+                        <a class="button" href="https://drive.google.com/file/d/1NyYU-7HgG-XK8nYHIrrnpIaSsSfIcJc4/view?usp=sharing">
                             <span class="button-text">Download CV</span>
                             <span class="button-icon fa fa-download"></span>
                         </a>
