--- a/about.html
+++ b/about.html
@@ -171,8 +171,8 @@
                         <ul class="about-list list-unstyled open-sans-font">
                             <li> <span class="title">Address :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Kitchener, ON, Canada</span> </li>
                             <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+1 (289) 823 2921</span> </li>
-                            <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">b.chauhan18061806@gmail.com</span> </li>
-                            <li> <span class="title">LinkedIn :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">bdots1806</span> </li>
+                            <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">b.chauhan1806@gmail.com</span> </li>
+                            <li> <a href="https://www.linkedin.com/in/bdots1806/"><span class="title">LinkedIn :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">bdots1806</span></a> </li>
                             <li><a href="https://github.com/Bdots1806/"> <span class="title">Github :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Bdots1806</span></a> </li>
                             <li> <span class="title">langages :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">English, Gujarati, Hindi</span> </li>
                         </ul>
