--- a/about.html
+++ b/about.html
@@ -358,6 +358,34 @@
                             <div class="icon">
                                 <i class="fa fa-briefcase"></i>
                             </div>
+                            <span class="time open-sans-font text-uppercase">Nov 2022 ‑ Present</span>
+                            <h5 class="poppins-font text-uppercase">TECH SALES ASSOCIATE<span class="place open-sans-font">Staples Inc.</span></h5>
+                            <p class="open-sans-font">• Acts as liaison to coordinate information and service between the end user of a product and the sales representatives in the selling
+                                                        organization.<br>
+                                                        • Works with end users to install, inspect, maintain, operate, and/or repair equipment.<br>
+                                                        • Answers inquiries and questions from customers related to ongoing use of products, maintenance requirements, operations, and
+                                                            other related information.<br>
+
+                            </p>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa fa-briefcase"></i>
+                            </div>
+                            <span class="time open-sans-font text-uppercase">Dec 2021 ‑ Sept 2022</span>
+                            <h5 class="poppins-font text-uppercase">IT EXECUTIVE & SAP EXECUTIVE <span class="place open-sans-font">Satyendra Packaging LTD</span></h5>
+                            <p class="open-sans-font">• Implement production mapping and resources management in ERP software SAP Business One.<br>
+                                – Production Module<br>
+                                – CRM, Purchase etc.<br>
+                                – Inventory Management.<br>
+                                • Manage linux based HANA database and servers.<br>
+                                • Enterprice networking and firewall configuration<br>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa fa-briefcase"></i>
+                            </div>
                             <span class="time open-sans-font text-uppercase">Feb 2020 - Dec 2020</span>
                             <h5 class="poppins-font text-uppercase">Software Engineer <span class="place open-sans-font">Prerna Foundation</span></h5>
                             <p class="open-sans-font">• Improve the existing websites as well as develop the user‑friendly admin panel for the admin and editor.<br>
@@ -371,6 +399,15 @@
             <div class="col-lg-6 m-15px-tb">
                 <div class="resume-box">
                     <ul>
+                        <li>
+                            <div class="icon">
+                                <i class="fa fa-graduation-cap"></i>
+                            </div>
+                            <span class="time open-sans-font text-uppercase">2024</span>
+                            <h5 class="poppins-font text-uppercase">GRADUATE CERTIFICATE<span class="place open-sans-font">Conestoga College, Waterloo</span></h5>
+                            <p class="open-sans-font">Mobile Solution Development
+                                </p>
+                        </li>
                         <li>
                             <div class="icon">
                                 <i class="fa fa-graduation-cap"></i>
