--- a/about.html
+++ b/about.html
@@ -413,9 +413,8 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2021</span>
-                            <h5 class="poppins-font text-uppercase">B.E in Computer Engineering<span class="place open-sans-font">KITE(Gujarat Technological University)</span></h5>
-                            <p class="open-sans-font">Currently, I’m pursuing my bachelor of computer engineering from the Knowledge Insitute of Technology and Engineering, Bakrol,
-                                Anand
+                            <h5 class="poppins-font text-uppercase">BACHELOR’S iN COMPUTER ENGINEERING<span class="place open-sans-font">Gujarat Technological University</span></h5>
+                            <p class="open-sans-font">I completed my bachelor of computer engineering from the Knowledge Insitute of Technology and Engineering, Bakrol, Anand
                                 </p>
                         </li>
                         <li>
