--- a/portfolio.html
+++ b/portfolio.html
@@ -22,68 +22,13 @@
     <!-- CSS Skin File -->
     <link href="css/skins/blue.css" rel="stylesheet">
 
-    <!-- Live Style Switcher - demo only -->
-    <!-- <link rel="alternate stylesheet" type="text/css" title="blue" href="css/skins/blue.css" />
-    <link rel="alternate stylesheet" type="text/css" title="green" href="css/skins/green.css" />
-    <link rel="alternate stylesheet" type="text/css" title="yellow" href="css/skins/yellow.css" />
-    <link rel="alternate stylesheet" type="text/css" title="blueviolet" href="css/skins/blueviolet.css" />
-    <link rel="alternate stylesheet" type="text/css" title="goldenrod" href="css/skins/goldenrod.css" />
-    <link rel="alternate stylesheet" type="text/css" title="magenta" href="css/skins/magenta.css" />
-    <link rel="alternate stylesheet" type="text/css" title="orange" href="css/skins/orange.css" />
-    <link rel="alternate stylesheet" type="text/css" title="purple" href="css/skins/purple.css" />
-    <link rel="alternate stylesheet" type="text/css" title="red" href="css/skins/red.css" />
-    <link rel="alternate stylesheet" type="text/css" title="yellowgreen" href="css/skins/yellowgreen.css" />
-    <link rel="stylesheet" type="text/css" href="css/styleswitcher.css" /> -->
 
     <!-- Modernizr JS File -->
     <script src="js/modernizr.custom.js"></script>
 </head>
 
 <body class="portfolio">
-<!-- Live Style Switcher Starts - demo only -->
-<!-- <div id="switcher" class="">
-    <div class="content-switcher">
-        <h4>STYLE SWITCHER</h4>
-        <ul>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('purple');" title="purple" class="color"><img src="img/styleswitcher/purple.png" alt="purple"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('red');" title="red" class="color"><img src="img/styleswitcher/red.png" alt="red"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('blueviolet');" title="blueviolet" class="color"><img src="img/styleswitcher/blueviolet.png" alt="blueviolet"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('blue');" title="blue" class="color"><img src="img/styleswitcher/blue.png" alt="blue"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('goldenrod');" title="goldenrod" class="color"><img src="img/styleswitcher/goldenrod.png" alt="goldenrod"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('magenta');" title="magenta" class="color"><img src="img/styleswitcher/magenta.png" alt="magenta"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('yellowgreen');" title="yellowgreen" class="color"><img src="img/styleswitcher/yellowgreen.png" alt="yellowgreen"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('orange');" title="orange" class="color"><img src="img/styleswitcher/orange.png" alt="orange"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('green');" title="green" class="color"><img src="img/styleswitcher/green.png" alt="green"/></a>
-            </li>
-            <li>
-                <a href="#" onclick="setActiveStyleSheet('yellow');" title="yellow" class="color"><img src="img/styleswitcher/yellow.png" alt="yellow"/></a>
-            </li>
-        </ul>
 
-        <a href="https://themeforest.net/item/tunis-personal-portfolio/26761598?irgwc=1&amp;clickid=UBs0rDX6YxyJWfewUx0Mo3E1UkiwozXD10XATw0&amp;iradid=275988&amp;irpid=1327395&amp;iradtype=ONLINE_TRACKING_LINK&amp;irmptype=mediapartner&amp;mp_value1=&amp;utm_campaign=af_impact_radius_1327395&amp;utm_medium=affiliate&amp;utm_source=impact_radius" class="waves-effect waves-light font-weight-700 purchase"><i class="fa fa-shopping-cart"></i> Purchase</a>
-        <div id="hideSwitcher">&times;</div>
-    </div>
-</div>
-<div id="showSwitcher" class="styleSecondColor"><i class="fa fa-cog fa-spin"></i></div> -->
-<!-- Live Style Switcher Ends - demo only -->
-<!-- Header Starts -->
 <header class="header" id="navbar-collapse-toggle">
     <!-- Fixed Navigation Starts -->
     <ul class="icon-menu d-none d-lg-block revealator-slideup revealator-once revealator-delay1">
@@ -150,6 +95,22 @@
         <!-- Portfolio Grid Starts -->
         <section class="grid-wrap">
             <ul class="row grid">
+                <!-- Portfolio Item Starts -->
+                <li>
+                    <figure>
+                        <img src="img/projects/07.png" alt="Portolio Image" />
+                        <div><span>Referral Tracker IOS</span></div>
+                    </figure>
+                </li>
+                <!-- Portfolio Item Ends -->
+                <!-- Portfolio Item Starts -->
+                <li>
+                    <figure>
+                        <img src="img/projects/p8.png" alt="Portolio Image" />
+                        <div><span>Rest API using Express</span></div>
+                    </figure>
+                </li>
+                <!-- Portfolio Item Ends -->
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
@@ -221,7 +182,7 @@
                         <img src="img/projects/project-9.jpg" alt="Portolio Image" />
                         <div><span>Image Project</span></div>
                     </figure> -->
-                </li>
+                <!-- </li> -->
                 <!-- Portfolio Item Ends -->
             </ul>
         </section>
@@ -229,6 +190,62 @@
         <!-- Portfolio Details Starts -->
         <section class="slideshow">
             <ul>
+                <!-- Portfolio Item Detail Starts -->
+                <li>
+                    <figure>
+                        <!-- Project Details Starts -->
+                        <figcaption>
+                            <h3>Referral Tracker IOS</h3>
+                            <div class="row open-sans-font">
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">IOS Application</span>
+                                </div>
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Type </span>: <span class="ft-wt-600 uppercase">Individual</span>
+                                </div>
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">Swift, Core data, Xcode</span>
+                                </div>
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://github.com/Bdots1806/Referral_Tracker_IOS" target="_blank">github</a></span>
+                                </div>
+                            </div>
+                        </figcaption>
+                        <!-- Project Details Ends -->
+                        <!-- Main Project Content Starts -->
+                        <img src="img/projects/p7.png" alt="Portolio Image" />
+                        <!-- Main Project Content Ends -->
+                    </figure>
+                </li>
+                <!-- Portfolio Item Detail Ends -->
+                <!-- Portfolio Item Detail Starts -->
+                <li>
+                    <figure>
+                        <!-- Project Details Starts -->
+                        <figcaption>
+                            <h3>REST API using Express</h3>
+                            <div class="row open-sans-font">
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">API</span>
+                                </div>
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Type </span>: <span class="ft-wt-600 uppercase">Individual</span>
+                                </div>
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">Javascript, Express</span>
+                                </div>
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://github.com/Bdots1806/Web_AS_4/tree/main/Backend" target="_blank">github</a></span>
+                                </div>
+                            </div>
+                        </figcaption>
+                        <!-- Project Details Ends -->
+                        <!-- Main Project Content Starts -->
+                        <img src="img/projects/p8.png" alt="Portolio Image" />
+                        <!-- Main Project Content Ends -->
+                    </figure>
+                </li>
+                <!-- Portfolio Item Detail Ends -->
                 <!-- Portfolio Item Detail Starts -->
                 <li>
                     <figure>
@@ -246,7 +263,7 @@
                                     <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">MEAN Stack</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://github.com/Bdots1806" target="_blank">github</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://github.com/Bdots1806/vps-file/" target="_blank">github</a></span>
                                 </div>
                             </div>
                         </figcaption>
@@ -330,7 +347,7 @@
                                     <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">Dart, Python</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank"></a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://github.com/Bdots1806/Digit_REG_Flutter" target="_blank"></a></span>
                                 </div>
                             </div>
                         </figcaption>
@@ -352,7 +369,7 @@
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Type </span>: <span class="ft-wt-600 uppercase">Individual</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Type </span>: <span class="ft-wt-600 uppercase">Internship</span>
                                 </div>
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript, LMS, PHP, MySQL</span>
@@ -380,7 +397,7 @@
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Type </span>: <span class="ft-wt-600 uppercase">Individual</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Type </span>: <span class="ft-wt-600 uppercase">Internship</span>
                                 </div>
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript, LMS, PHP, MySQL</span>
