--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
-                        <img src="img/projects/07.png" alt="Portolio Image" />
+                        <img src="img/projects/p7.png" alt="Portolio Image" />
                         <div><span>Referral Tracker IOS</span></div>
                     </figure>
                 </li>
